# review-service/openapi.yaml
@@ -10,6 +10,7 @@ paths:
         post:
             tags:
                 - Review
+            description: C端
             operationId: Review_CreateReview
             requestBody:
                 content:
@@ -24,6 +25,31 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/CreateReviewReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/review/reply:
+        post:
+            tags:
+                - Review
+            description: B端
+            operationId: Review_ReplyReview
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ReplyReviewRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ReplyReviewReply'
                 default:
                     description: Default error response
                     content:
@@ -69,6 +95,24 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ReplyReviewReply:
+            type: object
+            properties:
+                replyID:
+                    type: string
+        ReplyReviewRequest:
+            type: object
+            properties:
+                reviewID:
+                    type: string
+                storeID:
+                    type: string
+                content:
+                    type: string
+                picInfo:
+                    type: string
+                videoInfo:
+                    type: string
         Status:
             type: object
             properties:
